Create URL in templates

--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -15,7 +15,7 @@
                     <h5 class="card-title">TO DO</h5>
                     <p class="card-text">Realice un formulario de contacto en symfony que tenga: nombre, apellido , correo , celular, área de
 contacto (es una entidad) y mensaje. Debe guardar los datos en la base de datos.</p>
-                    <a href="#" class="btn btn-primary">Ir a Contacto</a>
+                    <a href="{{ path('contacto')}}" class="btn btn-primary">Ir a Contacto</a>
                 </div>
                 <div class="card-footer text-muted">
                     2 days ago
