--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -13,9 +13,12 @@
                 </div>
                 <div class="card-body">
                     <h5 class="card-title">TO DO</h5>
-                    <p class="card-text">Realice un formulario de contacto en symfony que tenga: nombre, apellido , correo , celular, área de
+                    <p class="card-text">3. Realice un formulario de contacto en symfony que tenga: nombre, apellido , correo , celular, área de
 contacto (es una entidad) y mensaje. Debe guardar los datos en la base de datos.</p>
                     <a href="{{ path('contacto')}}" class="btn btn-primary">Ir a Contacto</a>
+                    <p class="card-text">
+                    4. Valide que un usuario (correo) no pueda enviar
+más de 1 mensaje al día.</p>
                 </div>
                 <div class="card-footer text-muted">
                     2 days ago
