--- a/templates/contacto.html.twig
+++ b/templates/contacto.html.twig
@@ -1,40 +1,33 @@
 {# templates/contacto.html.twig #}
 {% extends "base.html.twig" %}
+
 {% block body %}
+    
     <div class="container">
         <div class="row mt-4">
             <div class="col-2">
 
             </div>
             <div class="col">
-                <form>
+                {{ form_start(form) }}
                     <div class="mb-3">
-                        <label for="nombre" class="form-label">Nombre</label>
-                        <input type="email" class="form-control" id="nombre">
+                        {{ form_row(form.nombre) }}
                     </div>
                     <div class="mb-3">
-                        <label for="apellido" class="form-label">Apellido</label>
-                        <input type="text" class="form-control" id="apellido">
+                        {{ form_row(form.apellido) }}
                     </div>
                     <div class="mb-3">
-                        <label for="exampleInputEmail1" class="form-label">Email</label>
-                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                        <div id="emailHelp" class="form-text">No compartiremos el mensaje con alguién más.</div>
+                        {{ form_row(form.correo) }}
                     </div>
                     <div class="mb-3">
-                        <label for="celular" class="form-label">Celular</label>
-                        <input type="text" class="form-control" id="celular">
+                        {{ form_row(form.celular) }}
                     </div>
                     <div class="mb-3">
-                        <label for="area" class="form-label">Área de contacto</label>
-                        <input type="text" class="form-control" id="area">
+                        {{ form_row(form.area) }}
                     </div>
-                    <div class="mb-3">
-                        <label for="mensaje" class="form-label">Mensaje</label>
-                        <textarea class="form-control" id="mensaje" rows="3"></textarea>
-                    </div>
+                    {{ form_row(form._token) }}
                     <button type="submit" class="btn btn-primary">Submit</button>
-                </form>
+                {{ form_end(form, {render_rest: false}) }}
             </div>
             <div class="col-2">
 
