--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -23,7 +23,7 @@
                     <a class="nav-link active" aria-current="page" href="{{ path('index') }}">Home</a>
                     </li>
                     <li class="nav-item">
-                    <a class="nav-link active" href="{{ path('contacto')}}">Contacto</a>
+                    <a class="nav-link active" href="{{ path('new_contacto')}}">Contacto</a>
                     </li>
                 </ul>
                 </div>
